# ai-latestnews-digest

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
ai_digest/: __init__.py  __main__.py  cli.py  digest.py  llm.py  scraper.py  web.py
ai_digest/static/: style.css
ai_digest/templates/: article_card.html  base.html  digest.html  feeds.html  index.html
digests/: digest_2026-01-12.md
